@@ -1,4 +1,4 @@
-  #SPINspiral:  Local input file, with system-dependent variables
+  #SPINspiral:  System input file, with system-dependent variables
 
   #Data directory (actual data files may be in a subdirectory of this, see mcmc.data):
   /home/sluys/work/GW/programs/MCMC/data
