@@ -2,6 +2,10 @@
   ChangeLog for SPINspiral code repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
   
+   151: sluys, 13/05/2009
+     - changed mcmc.input: added file name for system-dependent parameters
+       (see doc/mcmc.input)
+            
    149: sluys, 07/05/2009
      - added GNU licence stuff
    
